Broken UV unwrap for n-gons with 3 shared vertices #102543

Closed
opened 2022-11-16 01:54:15 +01:00 by Chris Blackbourn · 5 comments

When n-gons share 3 vertices, the triangulation can be non-manifold, even if the source mesh is manifold.

If that geometry is passed to the UV Unwrapper, strange things can happen.

  • Open the file ManifoldNGons.blend ManifoldNGons.blend image.png
  • In the UV editor, from the menu, choose select > all
  • From the menu, choose UV > Unwrap

bug image.png

Expected: image.png

For a simpler situation, the quads in the nose of "Suzanne", (the Default Blender Monkey) has a similar triangulation problem that is already handled in the code.

When n-gons share 3 vertices, the triangulation can be non-manifold, even if the source mesh is manifold. If that geometry is passed to the UV Unwrapper, strange things can happen. * Open the file ManifoldNGons.blend [ManifoldNGons.blend](https://archive.blender.org/developer/F13920269/ManifoldNGons.blend) ![image.png](https://archive.blender.org/developer/F13920283/image.png) * In the UV editor, from the menu, choose select > all * From the menu, choose UV > Unwrap *bug* ![image.png](https://archive.blender.org/developer/F13920288/image.png) Expected: ![image.png](https://archive.blender.org/developer/F13920294/image.png) For a simpler situation, the quads in the nose of "Suzanne", (the Default Blender Monkey) has a similar triangulation problem that is already handled in the code.
Author
Member

Added subscriber: @Chris_Blackbourn

Added subscriber: @Chris_Blackbourn
Chris Blackbourn self-assigned this 2022-11-16 01:54:38 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mano-wii

Added subscriber: @mano-wii

This issue was referenced by 644afda7eb

This issue was referenced by 644afda7eb6c58d4ca745b3a16870569913ae0f9
Author
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102543
No description provided.